<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">

    <View style="@style/HorizontalDivider"/>
 
<LinearLayout 
    android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:orientation="horizontal" >

    <Button 
        android:id="@+id/button_map_delete"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/button_delete_text"
        style="@style/Widget.Sherlock.ActionButton"
        android:layout_weight="1"/>
    
    <View style="@style/VerticalDivider" />
    
    <Button 
        android:id="@+id/button_map_cancel"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/button_cancel_text"
        style="@style/Widget.Sherlock.ActionButton"
        android:layout_weight="1"/>
    
    <View style="@style/VerticalDivider" />
    
    <Button 
        android:id="@+id/button_map_done"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/button_done_text"
        style="@style/Widget.Sherlock.ActionButton"
        android:layout_weight="1"/>

</LinearLayout>
</LinearLayout>